safari spacing on specialties drop-down: https://irt-bugs.stanford.edu/default.asp?42027
git-svn-id: https://irt-svn.stanford.edu/repos/irt/lane/laneweb/trunk@77336 c440208b-5602-0410-a095-92527a996296

--- a/src/main/webapp/resources/css/lane-nav.css
+++ b/src/main/webapp/resources/css/lane-nav.css
@@ -69,9 +69,9 @@
     margin:6px 0 0 32px;
 }
 #laneNav #specialties-menu {
-    width:340px;
+    width:350px;
 }
 #laneNav #specialties-menu li {
     float:left;
-    width:150px;
+    width:155px;
 }
